--- a/public/index.html
+++ b/public/index.html
@@ -9,21 +9,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>React App</title>
 
     <!-- Start Single Page Apps for GitHub Pages -->
@@ -38,22 +23,22 @@
       // When the single page app is loaded further down in this file,
       // the correct url will be waiting in the browser's history for
       // the single page app to route accordingly.
-      (function (l) {
-        if (l.search[1] === '/') {
-          var decoded = l.search
-            .slice(1)
-            .split('&')
-            .map(function (s) {
-              return s.replace(/~and~/g, '&');
-            })
-            .join('?');
-          window.history.replaceState(
-            null,
-            null,
-            l.pathname.slice(0, -1) + decoded + l.hash
-          );
-        }
-      })(window.location);
+      // (function (l) {
+      //   if (l.search[1] === '/') {
+      //     var decoded = l.search
+      //       .slice(1)
+      //       .split('&')
+      //       .map(function (s) {
+      //         return s.replace(/~and~/g, '&');
+      //       })
+      //       .join('?');
+      //     window.history.replaceState(
+      //       null,
+      //       null,
+      //       l.pathname.slice(0, -1) + decoded + l.hash
+      //     );
+      //   }
+      // })(window.location);
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
   </head>
